--- a/confs/hfavatar-people_h36m/debug.conf
+++ b/confs/hfavatar-people_h36m/debug.conf
@@ -1,31 +1,31 @@
 general {
-    base_exp_dir = ./exp/male_outfit2/
+    base_exp_dir = ./exp/S6/
     recording = [./,]
     total_bones = 24
 }
 
 dataset {
     dim = 3
-    dataset = SelfreconSynthesis
+    dataset = zju_mocap
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [male_outfit2]
-    val_split = [male_outfit2]
-    test_split = [male_outfit2]
-    train_views = [0]
-    test_views = [0]
-    val_views = [0]
-    N_frames = 215
+    train_split = [S6]
+    val_split = [S6]
+    test_split = [S6]
+    train_views = [54138969, 55011271, 58860488]
+    test_views = [60457274]
+    val_views = [60457274]
+    N_frames = 232
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = -1
+    train_end_frame = 10
     val_subsampling_rate = 10
-    val_start_frame = 50
-    val_end_frame = 200
-    test_subsampling_rate = 10
-    test_start_frame = 0
+    val_start_frame = 0
+    val_end_frame = 150
+    test_subsampling_rate = 30
+    test_start_frame = 150
     test_end_frame = -1
 
     box_margin = 0.05
@@ -36,14 +36,14 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = True # False
+    inner_sampling = False # False
     use_inter_mask = True # False
     res_level = 4
     use_dilated = True
 }
 
 train {
-    gpus = [0,1,2,3]
+    gpus = [1]
     batch_size = 1
     num_workers = 8
 
@@ -51,7 +51,7 @@ train {
     log_every_step = 10
     save_every_epoch = 10
 
-    max_epochs = 5000
+    max_epochs = 1000
     anneal_end = 50000
     warm_up_end = 5000
 
@@ -123,7 +123,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 60000, # for pose refiner
+        kick_in_iter = 60000,
     }
 
     non_rigid {
