--- a/confs/hfavatar-synthetic_human/SyntheticHuman-jody-mono-4gpus.conf
+++ b/confs/hfavatar-synthetic_human/SyntheticHuman-jody-mono-4gpus.conf
@@ -1,29 +1,29 @@
 general {
-    base_exp_dir = ./exp/male_outfit2/
+    base_exp_dir = ./exp/jody/
     recording = [./,]
     total_bones = 24
 }
 
 dataset {
     dim = 3
-    dataset = SelfreconSynthesis
+    dataset = SyntheticHuman
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [male_outfit2]
-    val_split = [male_outfit2]
-    test_split = [male_outfit2]
-    train_views = [0]
-    test_views = [0]
-    val_views = [0]
-    N_frames = 215
+    train_split = [jody]
+    val_split = [jody]
+    test_split = [jody]
+    train_views = [1]
+    test_views = [1]
+    val_views = [0, 2, 3, 4, 5, 6, 7, 8, 9]
+    N_frames = 100
 
     train_subsampling_rate = 1
     train_start_frame = 0
     train_end_frame = -1
-    val_subsampling_rate = 10
-    val_start_frame = 50
-    val_end_frame = 200
+    val_subsampling_rate = 20
+    val_start_frame = 0
+    val_end_frame = -1
     test_subsampling_rate = 10
     test_start_frame = 0
     test_end_frame = -1
@@ -116,14 +116,14 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 50000
+        kick_out_iter = 20000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 60000, # for pose refiner
+        kick_in_iter = 25000, # for pose refiner
     }
 
     non_rigid {
