--- a/confs/hfavatar-monocap/MonoCap-olek-mono-4gpus.conf
+++ b/confs/hfavatar-monocap/MonoCap-olek-mono-4gpus.conf
@@ -1,31 +1,31 @@
 general {
-    base_exp_dir = ./exp/CoreView_377/
+    base_exp_dir = ./exp/male_outfit1/
     recording = [./,]
     total_bones = 24
 }
 
 dataset {
     dim = 3
-    dataset = zju_mocap
+    dataset = SelfreconSynthesis
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [CoreView_377]
-    val_split = [CoreView_377]
-    test_split = [CoreView_377]
-    train_views = [0, 6, 12, 18]
-    test_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
-    val_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
-    N_frames = 616
+    train_split = [male_outfit1]
+    val_split = [male_outfit1]
+    test_split = [male_outfit1]
+    train_views = [44]
+    test_views = [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 49]
+    val_views = [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 49]
+    N_frames = 215
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 300
-    val_subsampling_rate = 100000
-    val_start_frame = 100
-    val_end_frame = 300
-    test_subsampling_rate = 30
-    test_start_frame = 300
+    train_end_frame = 200
+    val_subsampling_rate = 10
+    val_start_frame = 0
+    val_end_frame = 200
+    test_subsampling_rate = 10
+    test_start_frame = 0
     test_end_frame = -1
 
     box_margin = 0.05
@@ -36,7 +36,7 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = False # False
+    inner_sampling = True # False
     use_inter_mask = True # False
     res_level = 4
     use_dilated = True
@@ -51,7 +51,7 @@ train {
     log_every_step = 10
     save_every_epoch = 10
 
-    max_epochs = 1000
+    max_epochs = 5000
     anneal_end = 50000
     warm_up_end = 5000
 
@@ -116,14 +116,14 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 300000000000000000000
+        kick_out_iter = 20000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 300000000000000000000,
+        kick_in_iter = 20000, # for pose refiner
     }
 
     non_rigid {
