--- a/confs/hfavatar-monocap/MonoCap-vlad-mono-4gpus.conf
+++ b/confs/hfavatar-monocap/MonoCap-vlad-mono-4gpus.conf
@@ -1,31 +1,31 @@
 general {
-    base_exp_dir = ./exp/male_outfit2/
+    base_exp_dir = ./exp/vlad_images1011/
     recording = [./,]
     total_bones = 24
 }
 
 dataset {
     dim = 3
-    dataset = SelfreconSynthesis
+    dataset = zju_mocap
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [male_outfit2]
-    val_split = [male_outfit2]
-    test_split = [male_outfit2]
-    train_views = [0]
-    test_views = [0]
-    val_views = [0]
-    N_frames = 215
+    train_split = [vlad_images1011]
+    val_split = [vlad_images1011]
+    test_split = [vlad_images1011]
+    train_views = [66]
+    test_views = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]
+    val_views = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]
+    N_frames = 599
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = -1
-    val_subsampling_rate = 10
-    val_start_frame = 50
-    val_end_frame = 200
+    train_end_frame = 300
+    val_subsampling_rate = 3000
+    val_start_frame = 0
+    val_end_frame = 300
     test_subsampling_rate = 10
-    test_start_frame = 0
+    test_start_frame = 300
     test_end_frame = -1
 
     box_margin = 0.05
@@ -51,7 +51,7 @@ train {
     log_every_step = 10
     save_every_epoch = 10
 
-    max_epochs = 5000
+    max_epochs = 2000
     anneal_end = 50000
     warm_up_end = 5000
 
@@ -116,14 +116,14 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 50000
+        kick_out_iter = 20000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 60000, # for pose refiner
+        kick_in_iter = 20000, # for pose refiner
     }
 
     non_rigid {
