--- a/confs/hfavatar-people_h36m/H36M-S9-4gpus.conf
+++ b/confs/hfavatar-people_h36m/H36M-S9-4gpus.conf
@@ -1,31 +1,31 @@
 general {
-    base_exp_dir = ./exp/jody/
+    base_exp_dir = ./exp/S9/
     recording = [./,]
     total_bones = 24
 }
 
 dataset {
     dim = 3
-    dataset = SyntheticHuman
+    dataset = zju_mocap
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [jody]
-    val_split = [jody]
-    test_split = [jody]
-    train_views = [1]
-    test_views = [1]
-    val_views = [0, 2, 3, 4, 5, 6, 7, 8, 9]
-    N_frames = 100
+    train_split = [S9]
+    val_split = [S9]
+    test_split = [S9]
+    train_views = [54138969, 55011271, 58860488]
+    test_views = [60457274]
+    val_views = [60457274]
+    N_frames = 392
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = -1
+    train_end_frame = 260
     val_subsampling_rate = 20
     val_start_frame = 0
-    val_end_frame = -1
-    test_subsampling_rate = 10
-    test_start_frame = 0
+    val_end_frame = 260
+    test_subsampling_rate = 30
+    test_start_frame = 260
     test_end_frame = -1
 
     box_margin = 0.05
@@ -36,7 +36,7 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = True # False
+    inner_sampling = False # False
     use_inter_mask = True # False
     res_level = 4
     use_dilated = True
@@ -51,7 +51,7 @@ train {
     log_every_step = 10
     save_every_epoch = 10
 
-    max_epochs = 1000
+    max_epochs = 500
     anneal_end = 50000
     warm_up_end = 5000
 
@@ -123,7 +123,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 60000, # for pose refiner
+        kick_in_iter = 60000,
     }
 
     non_rigid {
