--- a/confs/hfavatar-synthetic_human/SyntheticHuman-malcolm-4gpus.conf
+++ b/confs/hfavatar-synthetic_human/SyntheticHuman-malcolm-4gpus.conf
@@ -1,31 +1,31 @@
 general {
-    base_exp_dir = ./exp/CoreView_377/
+    base_exp_dir = ./exp/malcolm/
     recording = [./,]
     total_bones = 24
 }
 
 dataset {
     dim = 3
-    dataset = zju_mocap
+    dataset = SyntheticHuman
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [CoreView_377]
-    val_split = [CoreView_377]
-    test_split = [CoreView_377]
-    train_views = [0]
-    test_views = [0]
-    val_views = [7]
-    N_frames = 616
+    train_split = [malcolm]
+    val_split = [malcolm]
+    test_split = [malcolm]
+    train_views = [1, 4, 7, 9]
+    test_views = [0, 2, 3, 5, 6, 8,]
+    val_views = [0, 2, 3, 5, 6, 8,]
+    N_frames = 70
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 500
-    val_subsampling_rate = 100
-    val_start_frame = 500
-    val_end_frame = -1
-    test_subsampling_rate = 100
-    test_start_frame = 500
+    train_end_frame = 70
+    val_subsampling_rate = 20
+    val_start_frame = 0
+    val_end_frame = 70
+    test_subsampling_rate = 20
+    test_start_frame = 70
     test_end_frame = -1
 
     box_margin = 0.05
@@ -43,15 +43,15 @@ dataset {
 }
 
 train {
-    gpus = [2]
+    gpus = [0,1,2,3]
     batch_size = 1
     num_workers = 8
 
-    val_every_epoch = 2
-    log_every_step = 1
+    val_every_epoch = 10
+    log_every_step = 10
+    save_every_epoch = 10
 
-    save_every_epoch  = 10
-    max_epochs = 500
+    max_epochs = 5000
     anneal_end = 50000
     warm_up_end = 5000
 
@@ -65,8 +65,8 @@ train {
     weights {
         rgb_weight = 10, # 10,
         perceptual_weight = 1, # 1,
-        mse_weight = 0.01,
-        nssim_weight = 0.01,
+        mse_weight = 1,
+        nssim_weight = 1,
         eikonal_weight = 0.1, # 0.1
         skinning_weight = 1,
         pose_refine_weight = 0,
@@ -90,13 +90,13 @@ model {
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
 
-    N_iter_backward = 1
+    N_iter_backward = 3
     use_init_sdf = True
     sdf_threshold = 0.05
 
     init_weight = False
     nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
-
+    
     # cano_view_dirs = False
     # near_surface_samples = 16
     # far_surface_samples = 16
@@ -116,14 +116,14 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 50000
+        kick_out_iter = 20000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 50000, # for pose refiner
+        kick_in_iter = 25000, # for pose refiner
     }
 
     non_rigid {
@@ -236,7 +236,7 @@ model {
     }
 
     neus_renderer {
-        n_samples = 64,
+        n_samples = 128,
         n_importance = 0,
         n_outside = 0,
         up_sample_steps = 4,     # 1 for simple coarse-to-fine sampling
