--- a/confs/hfavatar-synthetic_human/SyntheticHuman-megan-mono-4gpus.conf
+++ b/confs/hfavatar-synthetic_human/SyntheticHuman-megan-mono-4gpus.conf
@@ -1,31 +1,31 @@
 general {
-    base_exp_dir = ./exp/male_outfit2/
+    base_exp_dir = ./exp/manuel/
     recording = [./,]
     total_bones = 24
 }
 
 dataset {
     dim = 3
-    dataset = SelfreconSynthesis
+    dataset = SyntheticHuman
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [male_outfit2]
-    val_split = [male_outfit2]
-    test_split = [male_outfit2]
-    train_views = [0]
-    test_views = [0]
-    val_views = [0]
-    N_frames = 215
+    train_split = [manuel]
+    val_split = [manuel]
+    test_split = [manuel]
+    train_views = [1]
+    test_views = [1]
+    val_views = [0, 2, 3, 4, 5, 6, 7, 8, 9]
+    N_frames = 1300
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = -1
-    val_subsampling_rate = 10
-    val_start_frame = 50
-    val_end_frame = 200
-    test_subsampling_rate = 10
-    test_start_frame = 0
+    train_end_frame = 100
+    val_subsampling_rate = 30
+    val_start_frame = 0
+    val_end_frame = 100
+    test_subsampling_rate = 500
+    test_start_frame = 100
     test_end_frame = -1
 
     box_margin = 0.05
@@ -51,7 +51,7 @@ train {
     log_every_step = 10
     save_every_epoch = 10
 
-    max_epochs = 5000
+    max_epochs = 500
     anneal_end = 50000
     warm_up_end = 5000
 
@@ -116,14 +116,14 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 50000
+        kick_out_iter = 20000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 60000, # for pose refiner
+        kick_in_iter = 25000, # for pose refiner
     }
 
     non_rigid {
