--- a/confs/hfavatar-synthetic_human/SyntheticHuman-jody-mono-4gpus.conf
+++ b/confs/hfavatar-synthetic_human/SyntheticHuman-jody-mono-4gpus.conf
@@ -134,7 +134,7 @@ model {
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
         kick_in_iter = 0,
-        full_band_iter = 500000
+        full_band_iter = 2500000000000000
     }
     
     offset_net {
