--- a/confs/hfavatar-selfrecon_synthesis/SelfreconSynthesis-male-outfit1-mono-4gpus.conf
+++ b/confs/hfavatar-selfrecon_synthesis/SelfreconSynthesis-male-outfit1-mono-4gpus.conf
@@ -123,7 +123,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 20000, # for pose refiner
+        kick_in_iter = 50000000000, # for pose refiner
     }
 
     non_rigid {
