--- a/confs/hfavatar-selfrecon_synthesis/SelfreconSynthesis-male-outfit2-mono-4gpus.conf
+++ b/confs/hfavatar-selfrecon_synthesis/SelfreconSynthesis-male-outfit2-mono-4gpus.conf
@@ -116,14 +116,14 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 50000
+        kick_out_iter = 20000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 60000, # for pose refiner
+        kick_in_iter = 50000000000, # for pose refiner
     }
 
     non_rigid {
