--- a/confs/hfavatar-synthetic_human/SyntheticHuman-malcolm-4gpus.conf
+++ b/confs/hfavatar-synthetic_human/SyntheticHuman-malcolm-4gpus.conf
@@ -123,7 +123,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 25000, # for pose refiner
+        kick_in_iter = 2500000000000000, # for pose refiner
     }
 
     non_rigid {
