--- a/confs/hfavatar-monocap/MonoCap-olek-mono-4gpus.conf
+++ b/confs/hfavatar-monocap/MonoCap-olek-mono-4gpus.conf
@@ -1,18 +1,18 @@
 general {
-    base_exp_dir = ./exp/male_outfit1/
+    base_exp_dir = ./exp/olek_images0812/
     recording = [./,]
     total_bones = 24
 }
 
 dataset {
     dim = 3
-    dataset = SelfreconSynthesis
+    dataset = zju_mocap
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [male_outfit1]
-    val_split = [male_outfit1]
-    test_split = [male_outfit1]
+    train_split = [olek_images0812]
+    val_split = [olek_images0812]
+    test_split = [olek_images0812]
     train_views = [44]
     test_views = [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 49]
     val_views = [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 49]
@@ -21,11 +21,11 @@ dataset {
     train_subsampling_rate = 1
     train_start_frame = 0
     train_end_frame = 200
-    val_subsampling_rate = 10
+    val_subsampling_rate = 2000
     val_start_frame = 0
     val_end_frame = 200
     test_subsampling_rate = 10
-    test_start_frame = 0
+    test_start_frame = 200
     test_end_frame = -1
 
     box_margin = 0.05
