--- a/confs/hfavatar-synthetic_human/SyntheticHuman-megan-mono-4gpus.conf
+++ b/confs/hfavatar-synthetic_human/SyntheticHuman-megan-mono-4gpus.conf
@@ -1,5 +1,5 @@
 general {
-    base_exp_dir = ./exp/manuel/
+    base_exp_dir = ./exp/megan/
     recording = [./,]
     total_bones = 24
 }
@@ -10,13 +10,13 @@ dataset {
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [manuel]
-    val_split = [manuel]
-    test_split = [manuel]
+    train_split = [megan]
+    val_split = [megan]
+    test_split = [megan]
     train_views = [1]
     test_views = [1]
     val_views = [0, 2, 3, 4, 5, 6, 7, 8, 9]
-    N_frames = 1300
+    N_frames = 100
 
     train_subsampling_rate = 1
     train_start_frame = 0
@@ -43,7 +43,7 @@ dataset {
 }
 
 train {
-    gpus = [0,1,2,3]
+    gpus = [2,3]
     batch_size = 1
     num_workers = 8
 
@@ -51,7 +51,7 @@ train {
     log_every_step = 10
     save_every_epoch = 10
 
-    max_epochs = 500
+    max_epochs = 10000
     anneal_end = 50000
     warm_up_end = 5000
 
@@ -85,12 +85,12 @@ model {
     # [0] for mlp sdf
     # [1] for tri-plane sdf
     # [2] for hyper_net sdf
-    sdf_mode = 1
+    sdf_mode = 0
     # [0] knn, knn for points weight, and points offset for non-rigid
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
 
-    N_iter_backward = 3
+    N_iter_backward = 1
     use_init_sdf = True
     sdf_threshold = 0.05
 
@@ -116,7 +116,7 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 20000
+        kick_out_iter = 30000
     }
     
     pose_refiner{
