--- a/confs/hfavatar-zjumocap/ZJUMOCAP-394-4gpus.conf
+++ b/confs/hfavatar-zjumocap/ZJUMOCAP-394-4gpus.conf
@@ -14,7 +14,7 @@ dataset {
     val_split = [CoreView_394]
     test_split = [CoreView_394]
     train_views = [0, 6, 12, 18]
-    test_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
+    test_views = [3]
     val_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
     N_frames = 616
 
@@ -25,8 +25,8 @@ dataset {
     val_start_frame = 0
     val_end_frame = 300
     test_subsampling_rate = 10
-    test_start_frame = 300
-    test_end_frame = -1
+    test_start_frame = 150
+    test_end_frame = 152
 
     box_margin = 0.05
     erode_mask = False
