--- a/confs/hfavatar-monocap/MonoCap-vlad-mono-4gpus.conf
+++ b/confs/hfavatar-monocap/MonoCap-vlad-mono-4gpus.conf
@@ -6,7 +6,7 @@ general {
 
 dataset {
     dim = 3
-    dataset = zju_mocap
+    dataset = monocap
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
