--- a/confs/hfavatar-people_h36m/debug.conf
+++ b/confs/hfavatar-people_h36m/debug.conf
@@ -6,7 +6,7 @@ general {
 
 dataset {
     dim = 3
-    dataset = zju_mocap
+    dataset = h36m
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
@@ -43,7 +43,7 @@ dataset {
 }
 
 train {
-    gpus = [1]
+    gpus = [0]
     batch_size = 1
     num_workers = 8
 
