--- a/confs/hfavatar-people_h36m/H36M-S6-4gpus.conf
+++ b/confs/hfavatar-people_h36m/H36M-S6-4gpus.conf
@@ -6,7 +6,7 @@ general {
 
 dataset {
     dim = 3
-    dataset = zju_mocap
+    dataset = h36m
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
