--- a/confs/hfavatar-people_h36m/H36M-S9-4gpus.conf
+++ b/confs/hfavatar-people_h36m/H36M-S9-4gpus.conf
@@ -90,7 +90,7 @@ model {
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
 
-    N_iter_backward = 3
+    N_iter_backward = 1
     use_init_sdf = True
     sdf_threshold = 0.05
 
@@ -123,7 +123,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 60000,
+        kick_in_iter = 6000000000000,
     }
 
     non_rigid {
