--- a/confs/hfavatar-selfrecon_synthesis/SelfreconSynthesis-male-outfit2-mono-4gpus.conf
+++ b/confs/hfavatar-selfrecon_synthesis/SelfreconSynthesis-male-outfit2-mono-4gpus.conf
@@ -71,7 +71,7 @@ train {
         skinning_weight = 1,
         pose_refine_weight = 0,
         params_weight = 0,
-        mask_weight = 0,
+        mask_weight = 1,
     }
     weight_decay_end = 1e10,
     rgb_loss_type = l1
@@ -123,7 +123,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 50000000000, # for pose refiner
+        kick_in_iter = 20000, # for pose refiner
     }
 
     non_rigid {
