--- a/confs/hfavatar-people_snapshot/PeopleSnapshot-female-4-casual-mono-4gpus.conf
+++ b/confs/hfavatar-people_snapshot/PeopleSnapshot-female-4-casual-mono-4gpus.conf
@@ -46,7 +46,7 @@ train {
     gpus = [0,1,2,3]
     batch_size = 1
     num_workers = 8
-    lipis_type = alex
+    lpips_type = alex
 
     val_every_epoch = 10
     log_every_step = 10
