--- a/confs/hfavatar-people_h36m/H36M-S6-4gpus.conf
+++ b/confs/hfavatar-people_h36m/H36M-S6-4gpus.conf
@@ -71,9 +71,9 @@ train {
         skinning_weight = 1,
         pose_refine_weight = 0,
         params_weight = 0,
-        mask_weight = 0,
+        mask_weight = 10,
     }
-    weight_decay_end = 1e10,
+    weight_decay_end = 1000000,
     rgb_loss_type = l1
     view_input_noise = True
     pose_input_noise = True
@@ -90,7 +90,7 @@ model {
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
 
-    N_iter_backward = 1
+    N_iter_backward = 3
     use_init_sdf = True
     sdf_threshold = 0.05
 
@@ -116,14 +116,14 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 50000
+        kick_out_iter = 5000000000000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 600000000000,
+        kick_in_iter = 60000,
     }
 
     non_rigid {
