--- a/confs/hfavatar-selfrecon_synthesis/SelfreconSynthesis-male-outfit1-mono-4gpus.conf
+++ b/confs/hfavatar-selfrecon_synthesis/SelfreconSynthesis-male-outfit1-mono-4gpus.conf
@@ -71,7 +71,7 @@ train {
         skinning_weight = 1,
         pose_refine_weight = 0,
         params_weight = 0,
-        mask_weight = 1,
+        mask_weight = 10,
     }
     weight_decay_end = 1000000,
     rgb_loss_type = l1
@@ -116,7 +116,7 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 30000
+        kick_out_iter = 3000000000000
     }
     
     pose_refiner{
