--- a/confs/hfavatar-monocap/MonoCap-olek-mono-4gpus.conf
+++ b/confs/hfavatar-monocap/MonoCap-olek-mono-4gpus.conf
@@ -71,9 +71,9 @@ train {
         skinning_weight = 1,
         pose_refine_weight = 0,
         params_weight = 0,
-        mask_weight = 0,
+        mask_weight = 10,
     }
-    weight_decay_end = 1e10,
+    weight_decay_end = 500000,
     rgb_loss_type = l1
     view_input_noise = True
     pose_input_noise = True
@@ -116,14 +116,14 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 20000
+        kick_out_iter = 30000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 20000, # for pose refiner
+        kick_in_iter = 40000, # for pose refiner
     }
 
     non_rigid {
