--- a/confs/hfavatar-zjumocap/debug.conf
+++ b/confs/hfavatar-zjumocap/debug.conf
@@ -36,7 +36,7 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = False # False
+    inner_sampling = True # False
     use_inter_mask = True # False
     res_level = 4
     use_dilated = True
