--- a/confs/hfavatar-people_snapshot/PeopleSnapshot-female-4-casual-mono-4gpus.conf
+++ b/confs/hfavatar-people_snapshot/PeopleSnapshot-female-4-casual-mono-4gpus.conf
@@ -1,5 +1,5 @@
 general {
-    base_exp_dir = ./exp/male-4-casual/
+    base_exp_dir = ./exp/female-4-casual/
     recording = [./,]
     total_bones = 24
 }
@@ -10,9 +10,9 @@ dataset {
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [male-4-casual]
-    val_split = [male-4-casual]
-    test_split = [male-4-casual]
+    train_split = [female-4-casual]
+    val_split = [female-4-casual]
+    test_split = [female-4-casual]
     train_views = [0]
     test_views = [0]
     val_views = [0]
@@ -46,7 +46,7 @@ train {
     gpus = [0,1,2,3]
     batch_size = 1
     num_workers = 8
-    lpips_type = alex
+    # lpips_type = alex
 
     val_every_epoch = 10
     log_every_step = 10
@@ -72,7 +72,7 @@ train {
         skinning_weight = 1,
         pose_refine_weight = 0,
         params_weight = 0,
-        mask_weight = 0,
+        mask_weight = 1,
     }
     weight_decay_end = 1e10,
     rgb_loss_type = l1
