--- a/confs/hfavatar-people_snapshot/PeopleSnapshot-female-3-casual-mono-4gpus.conf
+++ b/confs/hfavatar-people_snapshot/PeopleSnapshot-female-3-casual-mono-4gpus.conf
@@ -46,7 +46,7 @@ train {
     gpus = [0,1,2,3]
     batch_size = 1
     num_workers = 8
-    lpips_type = alex
+    # lpips_type = alex
 
     val_every_epoch = 10
     log_every_step = 10
@@ -72,7 +72,7 @@ train {
         skinning_weight = 1,
         pose_refine_weight = 0,
         params_weight = 0,
-        mask_weight = 0,
+        mask_weight = 1,
     }
     weight_decay_end = 1e10,
     rgb_loss_type = l1
