--- a/confs/hfavatar-zjumocap/ZJUMOCAP-394-4gpus.conf
+++ b/confs/hfavatar-zjumocap/ZJUMOCAP-394-4gpus.conf
@@ -14,7 +14,7 @@ dataset {
     val_split = [CoreView_394]
     test_split = [CoreView_394]
     train_views = [0, 6, 12, 18]
-    test_views = [3]
+    test_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
     val_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
     N_frames = 616
 
@@ -71,7 +71,7 @@ train {
         skinning_weight = 1,
         pose_refine_weight = 0,
         params_weight = 0,
-        mask_weight = 0,
+        mask_weight = 1,
     }
     weight_decay_end = 1e10,
     rgb_loss_type = l1
